force-app/main/default/objects/Save_Game_Country_Ref__c/Save_Game_Country_Ref__c.object-meta.xml
<CustomObject>
    <label>Save Game Country Ref</label>
    <pluralLabel>Save Game Country Refs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Save Game Country Ref Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>