force-app/main/default/objects/Save_Game_Country_Ref__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Lookup</type>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Save_Game_References</relationshipName>
</CustomField>