force-app/main/default/objects/Save_Game_Country_Ref__c/fields/Reference_Key__c.field-meta.xml
<CustomField>
    <fullName>Reference_Key__c</fullName>
    <label>Reference Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>