force-app/main/default/objects/Save_Game_Country_Ref__c/fields/Reference_Kind__c.field-meta.xml
<CustomField>
    <fullName>Reference_Kind__c</fullName>
    <label>Reference Kind</label>
    <type>Text</type>
    <length>255</length>
</CustomField>