force-app/main/default/objects/Save_Game_Country_Ref__c/fields/Save_Game__c.field-meta.xml
<CustomField>
    <fullName>Save_Game__c</fullName>
    <label>Save Game</label>
    <type>MasterDetail</type>
    <referenceTo>Save_Game__c</referenceTo>
    <relationshipName>Country_References</relationshipName>
</CustomField>